styles/mobile_add_edit_contact_overlay.css
@media (max-width: 1200px) {
    .dialog_contact_container {
        width: 450px;
        height: 860px;
        background-color: #fff;
        border-radius: 25px; 
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        display: block;
        overflow-y: auto;
        position: relative;
    }

    .dialog_contact_container::after {
        width: 450px;
        height: 360px;
        background-color: #2a3647;
        border-top-left-radius: 25px;
        border-bottom-left-radius: 0px;
    }

    .contact_overlay_wrapper {
        display: flex;
        flex-direction: column;
        position: relative;
        z-index: 2;
    }

    .contact_left_container {
        width: 450px;
        height: 360px; 
        padding-left: 30px;
    }

    .contact_right_container {
        margin-left: 0px;
    }

    .logo_overlay {
        display: none;
    }

    .close_btn_container_contact_overlay {
        position: absolute;
        top: 30px;
        right: 30px;
    }

    .close_btn {
        content: url("../assets/img/x_white.svg");
        cursor: pointer;
    }

    .initals_big {
        position: absolute;
        top: 46%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .avatar-wrapper {
        background-color: #fff;
        border-radius: 50%;
        padding: 3.5px;
        position: absolute;
        top: 360px;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 10;
    }

    .contact_user_icon {
        position: absolute;
        top: 46%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .right_container_wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        padding-top: 68px;
        padding-left: 0px;
        margin-left: 0px;
    }

    .input_fields_container {
        display: flex;
        flex-direction: column;
        width: 390px;
        margin-right: 0px;
        margin-top: 40px;
    }
    
    .contact_btn_area {
        display: flex;
        justify-content: center;
    }
}

@media (max-width: 495px) {
    .dialog_contact_container {
        height: 580px;
        width: 300px;
    }

    .dialog_contact_container::after {
        height: 200px;
        width: 300px;
    }

    .close_btn_container_contact_overlay {
        position: absolute;
        top: 15px;
        right: 15px;
    }

    .contact_left_container {
        width: 300px;
        height: 200px; 
        padding-left: 15px;
        padding-bottom: 10px;
    }

    .right_container_wrapper {
        display: flex;
        justify-content: center;
    }

    .contact_right_container {
        display: flex;
        justify-content: center;
    }

    .dialog_contact_container::after {
        height: 200px;
    }

    .headline_overlay {
        font-size: 34px;
        font-weight: 600;
    }

    .subhead_overlay {
        color: #fff;
        font-family: "latin_400", sans-serif;
        font-size: 18px;
        font-weight: 400;
        margin-bottom: 5px;
    }

    .hr_overlay {
        margin: 10px 0;
        width: 60px;
    }

    .input_fields_container {
        width: 265px;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-top: 10px;
    }

    .contact_btn_area {
        margin-top: 20px;
        gap: 8px;
    }

    .avatar-wrapper {
        top: 200px;
    }

    .initals_big {
        width: 95px;
        height: 95px;
        font-size: 36px;
    }

    .contact_user_icon {
        width: 95px;
        height: 95px;
    }

    .input_fields_container {
        width: 265px;
        margin-right: 0px;
    }

    .contact_input::placeholder {
        font-size: 18px;
    }

    .user_input::placeholder {
        font-size: 18px;
    }

    .styled_input {
        font-size: 18px;    
        margin-bottom: -8px;       
    }

    .outline_btn,
    .filled_btn {
        padding: 4px 14px;
        font-size: 18px;
    }

    .show_btn {
        display: none;
    }
}

